# chronorust

./: Cargo.toml  ChronoRust-05-10-25-09-17-50-log.txt  ChronoRust-05-10-25-09-19-02-log.txt  ChronoRust-05-10-25-09-20-36-log.txt  Dockerfile  README.md  docker-compose.yml
.github/workflows/: ci.yml
chronorust-linux-x86_64-static/: chronorust  chronorust.d
chronorust-macos-x86_64/: chronorust  chronorust.d
chronorust-windows-x86_64/: chronorust.d
src/: big_digits.rs  big_digits_unicode.rs  main.rs  main_crossterm.rs  main_ratatui.rs
