[package]
name = "chronorust"
version = "0.2.9"
edition = "2021"
description = "A high-precision chronometer for Linux terminal"
authors = ["Your Name <your.email@example.com>"]
license = "MIT"
repository = "https://github.com/yourusername/chronorust"
keywords = ["chronometer", "timer", "terminal", "cli"]
categories = ["command-line-utilities"]

[dependencies]
crossterm = "0.27"
chrono = "0.4"
ratatui = "0.25"
